fix: make spinner more visible

--- a/hlx_statics/styles/styles.css
+++ b/hlx_statics/styles/styles.css
@@ -1254,7 +1254,7 @@ main .action-buttons.copy-markdown-button{
   width: 20px;
   height: 20px;
   border: 2px solid rgb(4, 105, 227);
-  border-top: 2px solid rgb(110, 110, 110);
+  border-top: 2px solid rgb(230, 230, 230);
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
